--- a/src/main/resources/templates/listadoEquipos.html
+++ b/src/main/resources/templates/listadoEquipos.html
@@ -33,7 +33,7 @@
                 <td th:text="${equipo.marca}"></td>
                 <td th:text="${equipo.modelo}"></td>
                 <td th:text="${equipo.cliente}"></td>
-                <td><a th:href="@{/buscarUltimaLectura/{id}(id=${equipo.id})}">TC</a></td>
+               <!-- <td><a th:href="@{/buscarUltimaLectura/{id}(id=${equipo.id})}">TC</a></td> -->
             </tr>
             </tbody>
         </table>
