--- a/src/main/resources/templates/nuevaTomaContador.html
+++ b/src/main/resources/templates/nuevaTomaContador.html
@@ -14,80 +14,76 @@
 
 
 <div class="container-fluid" layout:fragment="page-content">
-    <div class="container my-2">
+    <div class="container my-3">
 
-        <h2>NUEVA TOMA CONTADOR</h2>
-        <br>
+        <h3>NUEVA TOMA CONTADOR</h3>
+
         <!-- <a th:href="@{/agregarEvento}" class="btn btn-primary">Agregar Evento</a> -->
-        <div style="display: inline-block">
             <div style="display: inline-block">
-                <TABLE BORDER>
-                    <tr><th>CLIENTE  </th>
-                        <td>   </td>  <td th:text="${ultimoEvento.equipo.cliente.nombre}"></td></tr>
-                    <tr><th>MARCA</th>
-                        <td>   </td> <td th:text="${ultimoEvento.equipo.marca.name}"></td></tr>
-                    <tr><th>MODELO</th>
-                        <td>   </td>  <td th:text="${ultimoEvento.equipo.modelo.name}"></td></tr>
-                    <tr><th>SERIE</th>
-                        <td>   </td>  <td th:text="${ultimoEvento.equipo.serial}"></td></tr>
-                    <tr><th>CONTRATO</th>
-                        <td>   </td>  <td th:text="${contrato.refContrato}"></td></tr>
-                    <tr><th>INICIO</th>
-                        <td>   </td>  <td th:text="${#dates.format (contrato.fechaContrato, 'dd/MM/yyyy')}"></td></tr>
+
+                <TABLE class="table table-striped table-sm  table-hover border" >
+                    <tr>
+                        <th>CLIENTE  </th><td th:text="${ultimoEvento.equipo.cliente.nombre}"></td>
+                        <th>EQUIPO MARCA</th><td th:text="${ultimoEvento.equipo.marca.name}"></td>
+                        <th>MODELO</th><td th:text="${ultimoEvento.equipo.modelo.name}"></td>
+                    </tr>
+                    <tr>
+                        <th>SERIE</th><td th:text="${ultimoEvento.equipo.serial}"></td>
+                        <th>CONTRATO</th><td th:text="${contrato.refContrato}"></td>
+                        <th>INICIO</th><td th:text="${#dates.format (contrato.fechaContrato, 'dd/MM/yyyy')}"></td>
+                    </tr>
+                </TABLE>
+                <TABLE class="table  table-striped table-sm table-hover border">
+                    <tr>
+                        <th>Datos del Contrato</th></tr>
+                    <tr>
+                        <th>Páginas Incluidas  </th> <td th:text="${contrato.cupoPaginas}"></td>
+                        <th>Costo x Página $</th><td th:text="${contrato.costoPagina}"></td>
+                        <th>Costo Pág. Adicional $</th><td th:text="${contrato.costoPaginaAdicional}"></td>
+                    </tr>
+                    <tr><th>Scan Incluidos</th>
+                        <td th:text="${contrato.cupoScan}"></td>
+                        <th>Costo Scan Adicional $</th>
+                        <td th:text="${contrato.costoScanAdicional}"></td>
+                        <th>Cargo Básico $</th>
+                        <td th:text="${contrato.cargoBasico}"></td>
+                    </tr>
                 </TABLE>
             </div>
 
-            <div style="display: inline-block">
-                <TABLE BORDER>
-                    <tr><th>PAGINAS  </th>
-                        <td>   </td>  <td th:text="${contrato.cupoPaginas}"></td></tr>
-                    <tr><th>$xPágina</th>
-                        <td>   </td> <td th:text="${contrato.costoPagina}"></td></tr>
-                    <tr><th>$xPágAdicional</th>
-                        <td>   </td>  <td th:text="${contrato.costoPaginaAdicional}"></td></tr>
-                    <tr><th>SCAN Incluidos</th>
-                        <td>   </td>  <td th:text="${contrato.cupoScan}"></td></tr>
-                    <tr><th>$xScanAdicional</th>
-                        <td>   </td>  <td th:text="${contrato.costoScanAdicional}"></td></tr>
-                    <tr><th>Head3</th>
-                        <td>   </td>  <td>Item 9</td></tr>
-                </TABLE>
-            </div>
-        </div>
-
-        <br><br>
-
         <div style="display: inline-block">
-            <div style="display: inline-block">
+
                 <form action="#" th:action="@{/guardarEvento}" th:object="${newEvento}"  method="POST" >
                     <input type="hidden" id="equipo" name="equipo"  th:value="${ultimoEvento.equipo.id}" >
-                    <TABLE BORDER>
-                        <tr><th>FECHA  </th>
-                            <td th:text="${#dates.format (ultimoEvento.fechaEvento, 'dd/MM/yyyy')}"></td><td> <input type="date" th:field="*{fechaEvento}" placeholder="Fecha dd/MM/yyyy" >  </td></tr>
-                        <tr><th>PAGINAS</th>
-                            <td th:text="${ultimoEvento.contadorTotal}" ></td> <td> <input type="text" th:field="*{contadorTotal}" placeholder="Contador" ></td>
-                            <td><input type="checkbox" name="mycheckbox" th:field="*{chargeScan}" th:checked="${flag} ? 'checked'"> Facturar Scan</td></tr>
-                        <tr><th>SCAN</th>
-                            <td th:text="${ultimoEvento.contadorScan}" ></td> <td> <input type="text" th:field="*{contadorScan}" placeholder="Scan" ></td></tr>
 
-                        <tr><th>TIPO EVENTO</th>
-                            <td>   </td>  <td> <input type="text" th:field="*{tipoEvento}" placeholder="Tipo Evento" ></td></tr>
-                        <tr><th>DETALLE</th>
-                            <td>   </td>  <td> <input type="text" th:field="*{detalle}" placeholder="Detalle" ></td></tr>
-                        <tr><th>CONTRATO</th>
-                            <td>   </td>  <td th:text="${contrato.refContrato}"></td></tr>
-                        <tr><th>INICIO</th>
-                            <td>   </td>  <td th:text="${#dates.format (contrato.fechaContrato, 'dd/MM/yyyy')}"></td></tr>
+                    <TABLE class="table table-striped table-sm table-hover border">
+                        <tr><th>Fecha Inicial </th>
+                            <td th:text="${#dates.format (ultimoEvento.fechaEvento, 'dd/MM/yyyy')}"></td>
+                            <th>Fecha Final </th>
+                            <td> <input type="date" th:field="*{fechaEvento}" placeholder="Fecha dd/MM/yyyy" >  </td></tr>
+                        <tr><th>Paginas Anterior</th>
+                            <td th:text="${ultimoEvento.contadorTotal}" ></td>
+                            <th>Paginas Actual</th>
+                            <td> <input type="text" th:field="*{contadorTotal}" placeholder="Contador" ></td></tr>
+                        <tr><th>Scanner Anterior</th>
+                            <td th:text="${ultimoEvento.contadorScan}" ></td><th>Scanner Actual</th>
+                            <td> <input type="text" th:field="*{contadorScan}" placeholder="Scan" ></td>
+
+                        </tr>
+                        <tr><th>Nota</th>
+                            <td> <input type="text" th:field="*{detalle}" placeholder="Nota" ></td>
+                            <td><input type="checkbox" name="mycheckbox" th:field="*{chargeScan}" th:checked="${flag} ? 'checked'"> Facturar Scan</td>
+                        </tr>
                     </TABLE>
-                      <button type="submit">Guardar Evento</button>
+                    <input type="button" value="Validar" th:onclick="totalPaginas();">
+                    <button type="submit">Guardar Evento</button>
                 </form>
+        </div>
 
-            </div>
-         </div>
 
-         <input type="button" value="Validar" th:onclick="totalPaginas();">
-     </div>
- </div>
+    </div>
+</div>
+
  <!--OTRO SCRIPTS PARA PAGINAS-->
 <th:block layout:fragment="page-scripts">
     <script type="text/javascript">
@@ -96,10 +92,17 @@ function totalPaginas()
     //tomamos valores de contadores del html, el actual por etiqueta y el inicial por tagname
     var contFinal=parseInt(document.getElementById('contadorTotal').value);
     let obtenerDato = document.getElementsByTagName("td");
-    var contInicio=parseInt(obtenerDato[26].innerHTML );
+    var contInicio=parseInt(obtenerDato[14].innerHTML );
     var paginas=contFinal-contInicio;
+    console.log(contInicio);
+    //calculamos valores de scanner
+    var contFinalScan=parseInt(document.getElementById('contadorScan').value);
+    let obtenerDatoScan = document.getElementsByTagName("td");
+    var contInicioScan=parseInt(obtenerDato[16].innerHTML );
+    console.log(contInicioScan);
+    var scan =  contFinalScan-contInicioScan;
     //tomamos las fechas anterior(por etiqueta) y el actual por tagname
-    var date =(obtenerDato[24].innerHTML);
+    var date =(obtenerDato[12].innerHTML);
     console.log(date);
     var date_2 = new Date(document.getElementById('fechaEvento').value);
     console.log(date_2);
@@ -115,7 +118,7 @@ function totalPaginas()
     var diff_in_days = Math.ceil(diff_in_millisenconds / day_as_milliseconds);
 
     console.log( diff_in_days );
-    alert ("El numero de Páginas es: "+paginas+ "\n"+ "Dias : "+diff_in_days)
+    alert ("El numero de Páginas es: "+paginas+"\n"+ "Scan : "+scan+ "\n"+ "Dias : "+diff_in_days );
 
 }
 </script>
