--- a/src/main/resources/templates/nuevaTomaContador.html
+++ b/src/main/resources/templates/nuevaTomaContador.html
@@ -14,12 +14,12 @@
 
 
 <div class="container-fluid" layout:fragment="page-content">
-    <div class="container my-2">
+    <div>
 
         <h3>NUEVA TOMA CONTADOR</h3>
 
         <!-- <a th:href="@{/agregarEvento}" class="btn btn-primary">Agregar Evento</a> -->
-            <div style="display: inline-block">
+            <div >
 
                 <TABLE class="table table-striped table-sm  table-hover border" >
                     <tr>
@@ -51,7 +51,7 @@
                 </TABLE>
             </div>
 
-        <div style="display: inline-block">
+        <div >
 
                 <form action="#" th:action="@{/guardarEvento}" th:object="${newEvento}"  method="POST" >
                     <input type="hidden" id="equipo" name="equipo"  th:value="${ultimoEvento.equipo.id}" >
@@ -101,6 +101,7 @@ function totalPaginas()
     var contInicioScan=parseInt(obtenerDato[16].innerHTML );
     console.log(contInicioScan);
     var scan =  contFinalScan-contInicioScan;
+
     //tomamos las fechas anterior(por etiqueta) y el actual por tagname
     var date =(obtenerDato[12].innerHTML);
     console.log(date);
@@ -118,6 +119,9 @@ function totalPaginas()
     var diff_in_days = Math.ceil(diff_in_millisenconds / day_as_milliseconds);
 
     console.log( diff_in_days );
+    if ((scan < 0) || (diff_in_days <0) || (paginas<0)) {
+         alert ("Hay un resultado en valor Negativo, por favor revise los datos introducidos");
+    }
     alert ("El numero de Páginas es: "+paginas+"\n"+ "Scan : "+scan+ "\n"+ "Dias : "+diff_in_days );
 
 }
