--- a/src/main/resources/templates/generarReporteDocu.html
+++ b/src/main/resources/templates/generarReporteDocu.html
@@ -21,6 +21,10 @@
         <h3>LIQUIDACION SERVICIO IMPRESORA</h3>
         <div class="row">
             <div class="col-12">
+                <label>CLIENTE</label>
+                <input type="text" th:value="${ultimoEvento.equipo.cliente.nombre}"  size="40" >
+                <label>Dependencia</label>
+                <input type="text" th:value="${contrato.departamento}" size="20" >
                 <TABLE class="table table-striped table-sm  table-hover border" >
                     <tr>
                         <th>CLIENTE  </th><td th:text="${ultimoEvento.equipo.cliente.nombre}"></td>
@@ -111,99 +115,6 @@
                       <button type="submit">Guardar Evento</button>
                 </form>
 
-
-                <!-- <a th:text="${ultimoEvento.equipo.id}"></a>
-                 <input type="text" id="equipo&&$" name="equipo"  th:value="${ultimoEvento.equipo.id}" >
-                 <br>
-                 <input type="date" th:field="*{fechaEvento}" placeholder="Fecha dd/MM/yyyy" >
-                 <br>
-                 <input type="text" th:field="*{contadorTotal}" placeholder="Contador" >
-                 <input type="text" th:field="*{tipoEvento}" placeholder="Tipo Evento" >
-                 <input type="text" th:field="*{detalle}" placeholder="Detalle" >
-                 <a th:number="${ultimoEvento.equipo.id}"></a>
-                 <button type="submit">Guardar Evento</button>
-             </form>
-             <TABLE BORDER>
-                 <TR><TH>FECHA  </TH>
-                     <td th:text="${#dates.format (ultimoEvento.fechaEvento, 'dd/MM/yyyy')}"></td><TD> <input type="text" id="equipo&&88" name="equipo"  th:value="${ultimoEvento.equipo.id}" >  </TD>  <td th:text="${ultimoEvento.equipo.cliente.nombre}"></td></TR>
-                 <TR><TH>MARCA</TH>
-                     <TD>   </TD> <td th:text="${ultimoEvento.equipo.marca.name}"></td></TR>
-                 <TR><TH>MODELO</TH>
-                     <TD>   </TD>  <td th:text="${ultimoEvento.equipo.modelo.name}"></td></TR>
-                 <TR><TH>SERIE</TH>
-                     <TD>   </TD>  <td th:text="${ultimoEvento.equipo.serial}"></td></TR>
-                 <TR><TH>CONTRATO</TH>
-                     <TD>   </TD>  <td th:text="${contrato.refContrato}"></td></TR>
-                 <TR><TH>INICIO</TH>
-                     <TD>   </TD>  <td th:text="${#dates.format (contrato.fechaContrato, 'dd/MM/yyyy')}"></td></TR>
-             </TABLE>
-         </div>
-
-         <div style="display: inline-block">
-
-             <input>PARRAFO</input>
-             <TABLE BORDER>
-                 <TR><TH>PAGINAS  </TH>
-                     <TD>   </TD>  <td th:text="${contrato.cupoPaginas}"></td></TR>
-                 <TR><TH>$xPágina</TH>
-                     <TD>   </TD> <td th:text="${contrato.costoPagina}"></td></TR>
-                 <TR><TH>$xPágAdicional</TH>
-                     <TD>   </TD>  <td th:text="${contrato.costoPaginaAdicional}"></td></TR>
-                 <TR><TH>$xScan</TH>
-                     <TD>   </TD>  <td th:text="${contrato.cupoScan}"></td></TR>
-                 <TR><TH>$xScanAdicional</TH>
-                     <TD>   </TD>  <td th:text="${contrato.costoScanAdicional}"></td></TR>
-                 <TR><TH>Head3</TH>
-                     <TD>   </TD>  <TD>Item 9</TD></TR>
-             </TABLE>
-         </div>
-     </div>
-
-
-
-
-
-
-         <div align="center">
-             <table border="1">
-                 <thead>
-                 <th>Consecutivo</th>
-                 <th>Cliente</th>
-                 <th>Marca</th>
-                 <th>Modelo</th>
-                 <th>Fecha Evento</th>
-                 <th>Contador Total</th>
-                 <th>Tipo Evento</th>
-                 <th>Detalle</th>
-                 </thead>
-                 <tbody>
-                 <tr th:object=${ultimoEvento} >
-                     <td th:text="${ultimoEvento.id}"></td>
-                     <td th:text="${ultimoEvento.equipo.cliente.nombre}"></td>
-                     <td th:text="${ultimoEvento.equipo.marca.name}"></td>
-                     <td th:text="${ultimoEvento.equipo.modelo.name}"></td>
-                     <td th:text="${#dates.format (ultimoEvento.fechaEvento, 'dd/MM/yyyy')}"></td>
-                     <td th:text="${ultimoEvento.contadorTotal}" ></td>
-                     <td th:text="${ultimoEvento.tipoEvento}"></td>
-                     <td th:text="${ultimoEvento.detalle}"></td>
-                 </tr>
-                 </tbody>
-             </table>
-         </div>
-     </div>
-     <div>
-         <form action="#" th:action="@{/guardarEvento}" th:object="${newEvento}" method="POST">
-             <a th:text="${ultimoEvento.equipo.id}"></a>
-             <input type="text" id="equipo" name="equipo"  th:value="${ultimoEvento.equipo.id}" >
-             <br>
-             <input type="date" th:field="*{fechaEvento}" placeholder="Fecha dd/MM/yyyy" >
-             <br>
-             <input type="text" th:field="*{contadorTotal}" placeholder="Contador" >
-             <input type="text" th:field="*{tipoEvento}" placeholder="Tipo Evento" >
-             <input type="text" th:field="*{detalle}" placeholder="Detalle" >
-             <a th:number="${ultimoEvento.equipo.id}"></a>
-             <button type="submit">Guardar Evento</button>
-         </form> -->
          <input type="button" value="Liquida" th:onclick="totalPaginas();">
      </div>
  </div>
