--- a/src/main/resources/static/css/reporte.css
+++ b/src/main/resources/static/css/reporte.css
@@ -39,10 +39,20 @@ input{
     font-size: 16px;
 }
 
-.1{
-    background-color: red;
-}
-
-.2{
-    background-color: blue;
+.myButton {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	background-color:#ffffff;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+	margin-right: 200px;
 }
