update from laptop

--- a/src/main/resources/templates/editTomaContador.html
+++ b/src/main/resources/templates/editTomaContador.html
@@ -16,7 +16,7 @@
 <div class="container-fluid" layout:fragment="page-content">
     <div>
 
-        <h3>NUEVA TOMA CONTADOR</h3>
+        <h3>EDITAR TOMA CONTADOR</h3>
 
         <!-- <a th:href="@{/agregarEvento}" class="btn btn-primary">Agregar Evento</a> -->
             <div >
@@ -83,7 +83,7 @@
     </div>
 </div>
 
- <!--OTRO SCRIPTS PARA PAGINAS-->
+ <!--OTRO SCRIPTS PARA PAGINAS
 <th:block layout:fragment="page-scripts">
     <script type="text/javascript">
 function totalPaginas()
@@ -125,7 +125,7 @@ function totalPaginas()
 
 }
 </script>
-</th:block>
+</th:block>-->
 </body>
 
 </html>
