--- a/src/main/resources/templates/listaContratos.html
+++ b/src/main/resources/templates/listaContratos.html
@@ -46,7 +46,7 @@
                 <td th:text="${contrato.cliente}"></td>
                 <td th:text="${contrato.equipo}"></td>
                 <td th:text="${contrato.departamento}"></td>
-                <td th:text="${contrato.ipadd}"></td>
+                <td th:text="${contrato.ipAddr}"></td>
                 <td th:text="${contrato.cupoPaginas}"></td>
                 <td th:text="${contrato.costoPagina}"></td>
                 <td th:text="${contrato.costoPaginaAdicional}"></td>
