--- a/src/main/resources/templates/newContratoForm.html
+++ b/src/main/resources/templates/newContratoForm.html
@@ -27,7 +27,7 @@
             <input type="text" th:field="*{detalles}" placeholder="Detalle" class="form-control mb-4 col-4">
             <input type="text" th:field="*{equipo}" placeholder="Equipo" class="form-control mb-4 col-4">
             <input type="text" th:field="*{departamento}" placeholder="Departamento" class="form-control mb-4 col-4">
-            <input type="text" th:field="*{ipadd}" placeholder="Dirección IP" class="form-control mb-4 col-4">
+            <input type="text" th:field="*{ipAddr}" placeholder="Dirección IP" class="form-control mb-4 col-4">
             <button type="submit" class="btn btn-info col-2">Guardar Contrato</button>
         </form>
     </div>
