--- a/src/main/resources/templates/listaEventos.html
+++ b/src/main/resources/templates/listaEventos.html
@@ -17,8 +17,9 @@
         <div class="container my-2">
         <h2>LISTADO DE EVENTOS</h2>
         <br>
-        <a th:href="@{/agregarEvento}" class="btn btn-primary">Agregar Evento</a>
+            <!-- <a th:href="@{/agregarEvento}" class="btn btn-primary">Agregar Evento</a>
         <br><br>
+        Deshabilitado por ahora-->
 
 
         <table  class="table table-striped table-hover">
@@ -27,11 +28,11 @@
             <th>Cliente</th>
             <th>Marca</th>
             <th>Modelo</th>
-            <th>Fecha Evento</th>
-            <th>Contador Total</th>
-            <th>Contador Scan</th>
-            <th>Tipo Evento</th>
-            <th>Detalle</th>
+            <th>Fecha</th>
+            <th>Cont.Total</th>
+            <th>Cont.Scan</th>
+            <!--<th> Es Toma Contador</th> -->
+            <th>Comentario</th>
             <th>Accion</th>
             </thead>
             <tbody>
@@ -44,9 +45,10 @@
                 <td th:text="${#dates.format (evento.fechaEvento, 'dd/MM/yyyy')}"></td>
                 <td th:text="${evento.contadorTotal}"></td>
                 <td th:text="${evento.contadorScan}"></td>
-                <td th:text="${evento.tipoEvento}"></td>
+                <!-- <td th:text="${evento.tomaContador}"></td> -->
                 <td th:text="${evento.detalle}"></td>
-                <td><a th:href="@{/agregarLiquidacion/{id}/{idE}(id=${evento.equipo_id} , idE=${evento.id}) }">LQ</a></td>
+                <td><a th:href="@{/editEvento/{id}(id=${evento.id}) }">Edit</a></td>
+                <!-- <td><a th:href="@{/editEvento/{id}/{idE}(id=${evento.equipo_id} , idE=${evento.id}) }">Edit</a></td>-->
           </tr>
           </tbody>
       </table>
