--- a/src/main/resources/templates/newClienteForm.html
+++ b/src/main/resources/templates/newClienteForm.html
@@ -16,7 +16,7 @@
     <div class="container my-2">
         <h1>Nuevo Cliente</h1>
 
-        <form action="#" th:action="@{/agregarCliente}" th:object="${cliente}" method="POST">
+        <form action="#" th:action="@{/guardarCliente}" th:object="${cliente}" method="POST">
 
             <input type="text" th:field="*{identificacion}" placeholder="Identificacion" >
             <input type="text" th:field="*{nombre}" placeholder="Nombre" >
